--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClickCount"
-            android:text="Anzahl"
+            android:text="Count"
             android:layout_weight="1"/>
 
         <Button
@@ -73,6 +73,14 @@
             android:layout_height="wrap_content"
             android:onClick="onClickAll"
             android:text="All"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/buttonToday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClickToday"
+            android:text="Today"
             android:layout_weight="1"/>
     </LinearLayout>
 </LinearLayout>
